--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   ],
   "scripts": {
     "dev": "concurrently 'npm -w packages/core run dev' 'npm -w packages/dom run dev'",
+    "build": "npm -w packages/core run build && npm -w packages/dom run build && npm -w packages/react-dom run build",
     "build:typescript": "tsc --project .config/tsconfig.json",
     "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts",
-    "lint": "eslint . --ext .js,.ts"
+    "lint": "eslint . --ext .js,.ts",
+    "test:types": "tsc"
   },
   "author": "",
   "license": "MIT",
