--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -22,6 +22,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
+  "dependencies": {
+    "@floating-ui/dom": "file:../dom"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
