--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -1,7 +1,9 @@
-name: CI
+name: Update Visual Snapshots
 on: [workflow_dispatch]
 env:
   CI: true
+  PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1 # Skip downloading during yarn install
+  PLAYWRIGHT_BROWSERS_PATH: 0 # Places binaries to node_modules/@playwright/test
 
 jobs:
   functional-tests:
@@ -12,9 +14,14 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '17'
-      - name: Install deps
-        run: npm install
-        run: npx playwright install-deps
-      - name: Run functional tests
-        run: npm run build
-        run: npm -w packages/dom run test:functional
+      - run: npx playwright install-deps
+      - run: npm install
+      - run: npx playwright install
+      - run: npm run build
+      - run: npm -w packages/dom run test:functional
+      - uses: EndBug/add-and-commit@v7
+        with:
+          add: '.'
+          author_name: 'GitHub Actions'
+          author_email: 'github-actions@github.com'
+          message: 'test: update visual snapshots'
