--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -15,7 +15,7 @@
     "dev": "concurrently 'rollup -c -w' 'serve -l 1234 test/visual'",
     "build": "NODE_ENV=build rollup -c",
     "test": "jest test",
-    "test:functional": "concurrently 'npm run dev' 'npx playwright test --update-snapshots'"
+    "test:functional": "rollup -c && npx playwright test -u"
   },
   "author": "",
   "license": "MIT",
