--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm install
       - run: npx playwright install
       - run: npm run build
-      - run: npm -w packages/dom run test:functional
+      - run: npm -w packages/dom run test:functional:update
       - uses: EndBug/add-and-commit@v7
         with:
           add: '.'
