--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm run test:types
 
   functional-tests:
-    name: Functional-tests
+    name: Functional Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
