--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.3",
+    "@reach/skip-nav": "^0.16.0",
     "@tailwindcss/typography": "^0.4.1",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
