--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^17.0.0",
+    "react": ">16.8.0",
     "react-native": ">=0.64.0"
   },
   "dependencies": {
