--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build:typescript": "tsc --project .config/tsconfig.json",
     "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts",
     "lint": "eslint . --ext .js,.ts",
-    "test:types": "tsc"
+    "test:types": "tsc",
+    "dev:website": "npm run build && npm -w website run build",
+    "build:website": "npm run build && npm -w website run build"
   },
   "author": "",
   "license": "MIT",
