--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@floating-ui/core",
   "version": "0.0.1",
-  "description": "Primitives for positioning floating UI elements",
+  "description": "Positioning library for floating elements: tooltips, popovers, dropdowns, and more",
   "main": "dist/floating-ui.core.js",
   "module": "dist/floating-ui.core.mjs",
   "sideEffects": false,
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@atomico/rollup-plugin-sizes": "^1.1.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
@@ -30,8 +31,5 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {
-    "@atomico/rollup-plugin-sizes": "^1.1.4"
   }
 }
