--- a/.config/tsconfig.json
+++ b/.config/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "module": "es2015",
     "removeComments": false,
+    "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "../packages"
