--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-feather": "^2.0.9"
+    "react-feather": "^2.0.9",
+    "use-isomorphic-layout-effect": "^1.1.1"
   }
 }
