--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF website/"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF package-lock.json website/"
