--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run test:types
+      - run: npm -w packages/core test
+      - run: npm -w packages/react-dom test
 
   functional-tests:
     name: Functional Tests
