--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run test:types
+      - run: npm run build
       - run: npm -w packages/core test
       - run: npm -w packages/react-dom test
 
