--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "description": "Positioning library for floating elements: tooltips, popovers, dropdowns, and more",
   "main": "dist/floating-ui.core.js",
   "module": "dist/floating-ui.core.mjs",
+  "unpkg": "dist/floating-ui.core.min.js",
   "sideEffects": false,
   "files": [
     "dist/",
