--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -4,6 +4,7 @@
   "description": "Floating UI React DOM",
   "main": "dist/floating-ui.react-dom.js",
   "module": "dist/floating-ui.react-dom.mjs",
+  "unpkg": "dist/floating-ui.react-dom.min.js",
   "sideEffects": false,
   "files": [
     "dist/",
