chore: widen browser support scope for transpilation

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,7 @@
     "index.d.ts",
     "src/**/*.d.ts"
   ],
-  "browserslist": "> 1%, not dead",
+  "browserslist": "> 0.5%, not dead, not IE 11",
   "scripts": {
     "test": "jest test",
     "build": "NODE_ENV=build rollup -c",
