--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -36,7 +36,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@floating-ui/dom": "^0.1.0"
+    "@floating-ui/dom": "^0.1.0",
+    "use-isomorphic-layout-effect": "^1.1.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
