--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "Positioning library for floating elements: tooltips, popovers, dropdowns, and more",
   "main": "dist/floating-ui.core.js",
-  "module": "dist/floating-ui.core.mjs",
+  "module": "dist/floating-ui.core.esm.js",
   "unpkg": "dist/floating-ui.core.min.js",
   "sideEffects": false,
   "files": [
