chore: add repository field to package.json files
To display the repository field in the npmjs.com registry.

Docs: https://docs.npmjs.com/cli/v8/configuring-npm/package-json#repository

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,11 @@
   "author": "atomiks",
   "license": "MIT",
   "bugs": "https://github.com/atomiks/floating-ui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atomiks/floating-ui.git",
+    "directory": "packages/core"
+  },
   "homepage": "https://floating-ui.com",
   "keywords": [
     "tooltip",
