--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -20,6 +20,11 @@
   "author": "atomiks",
   "license": "MIT",
   "bugs": "https://github.com/atomiks/floating-ui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atomiks/floating-ui.git",
+    "directory": "packages/react-dom"
+  },
   "homepage": "https://floating-ui.com/docs/react-dom",
   "keywords": [
     "tooltip",
