--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -13,6 +13,7 @@
   ],
   "browserslist": "> 0.5%, not dead, not IE 11",
   "scripts": {
+    "test2": "node --inspect-brk ../../node_modules/.bin/jest test",
     "test": "jest test",
     "build": "NODE_ENV=build rollup -c",
     "dev": "parcel test/visual/index.html --dist-dir test/visual/dist"
@@ -41,11 +42,13 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
