--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.18.1"
   }
 }
