--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   checks:
-    name: Linting and Type checking
+    name: Linting and type checking
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -13,12 +13,22 @@ jobs:
       - uses: bahmutov/npm-install@v1
       - run: npm run lint
       - run: npm run test:types
+
+  unit-tests:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '17'
+      - uses: bahmutov/npm-install@v1
       - run: npm run build
       - run: npm -w packages/core test
       - run: npm -w packages/react-dom test
 
   functional-tests:
-    name: Functional Tests
+    name: Functional tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
