--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^2.2.19"
   },
   "dependencies": {
+    "@floating-ui/dom": "^0.1.4",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.3",
     "@reach/skip-nav": "^0.16.0",
