--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && node highlight",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.4.0",
+    "jsdom": "^19.0.0",
     "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "unist-util-visit": "^2.0.3"
   },
   "dependencies": {
     "@floating-ui/react-dom": "^0.3.0",
@@ -34,10 +36,10 @@
     "classnames": "^2.3.1",
     "next": "^12.0.4",
     "parse-numeric-range": "^1.3.0",
-    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "shiki": "^0.9.14",
     "use-isomorphic-layout-effect": "^1.1.1"
   }
 }
