--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts",
     "lint": "eslint . --ext .js,.ts",
     "test:types": "tsc",
-    "dev:website": "npm run build && npm -w website run dev",
-    "build:website": "npm run build && npm -w website run build"
+    "dev:website": "npm -w website run dev",
+    "build:website": "npm -w website run build"
   },
   "author": "",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "eslint": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.0",
+    "shiki": "^0.9.14",
     "typescript": "^4.5.2"
   },
   "dependencies": {
