--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "concurrently 'npm -w packages/core run dev' 'npm -w packages/dom run dev'",
     "build": "npm -w packages/core run build && npm -w packages/dom run build && npm -w packages/react-dom run build && npm -w packages/react-native run build",
     "build:typescript": "tsc --project .config/tsconfig.json",
-    "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts",
+    "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts packages/**/dist",
     "lint": "eslint . --ext .js,.ts",
     "test:types": "tsc",
-    "dev:website": "npm -w website run dev",
-    "build:website": "npm -w website run build"
+    "dev:website": "npm run build && npm -w website run dev",
+    "build:website": "npm run build && npm -w website run build"
   },
   "author": "",
   "license": "MIT",
