use StaticCode component

--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export && node highlight",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
