--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently 'npm -w packages/core run dev' 'npm -w packages/dom run dev'",
     "build": "npm -w packages/core run build && npm -w packages/dom run build && npm -w packages/react-dom run build && npm -w packages/react-native run build",
     "build:typescript": "tsc --project .config/tsconfig.json",
-    "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts",
+    "clean": "rm -rf packages/**/src/[^_]*.d.ts packages/**/src/**/[^_]*.d.ts packages/**/dist",
     "lint": "eslint . --ext .js,.ts",
     "test:types": "tsc",
     "dev:website": "npm run build && npm -w website run dev",
@@ -32,6 +32,7 @@
     "eslint": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.0",
+    "shiki": "^0.9.14",
     "typescript": "^4.5.2"
   },
   "dependencies": {
