--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
     "unist-util-visit": "^2.0.3"
   },
   "dependencies": {
+    "@atomiks/mdx-pretty-code": "^0.0.1",
     "@floating-ui/react-dom": "^0.3.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.3",
